轮播图完成

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="https://hellojoy.jd.com/?babelChannel=1518455&activityId=9688&source=01">
                         <!-- <img src="http://img1.360buyimg.com/da/jfs/t1/17098/23/11599/160999/5c90a484E27dd5514/7287f0d182775168.gif">  -->
                         <img width="190" height="140"
-                            src="file:///C:/Users/15910/Desktop/Html_WorkSpace/jd/img/logo_jd.png" alt="logo">
+                            src="img/logo_jd.png" alt="logo">
                     </a>
 
                 </div>
@@ -535,7 +535,7 @@
                 <!-- 轮播区域 -->
                 <div class="content_wrapper_banner_box">
                     <div class="banner_box" id="banner">
-                          <ul class="banner_box_ul">
+                          <ul class="banner_box_ul" style="position: absolute; top: 0px; left: -590px; width: 500%; height: 100%;" >
                             <li>
                               <img width="590px"  height="470px" src="img/banner_one.jpg">
                             </li>
@@ -576,8 +576,8 @@
     <!-- 引入轮播区域js -->
     <script src="js/banner.js"></script>
     <script>
-        const menu = new CMenu("#menu");
-        const banner = new Banner("#banner")
+       const menu = new CMenu("#menu");
+       const banner = new Banner("#banner")
     </script>
 </body>
 
