京东秒杀骨架完成

--- a/index.html
+++ b/index.html
@@ -566,9 +566,71 @@
                           </div>
                     </div>
                 </div>
-                <div class="content_wrapper_ad_box"></div>
-                <div class="content_wrapper_info_box"></div>
+                <!-- 轮播右侧快讯区域 -->
+                <div class="content_wrapper_ad_box">
+                        <div class="ad_title">京东快报</div>
+                         <ul>
+                             <li><a href="#"> <span>推荐</span>2019年度TWS真无线蓝牙耳机横评之选购指南</a> </li>
+                             <li><a href="#"> <span>推荐</span>票友圈装优雅不叫真优雅，想要表里如一得这样</a></li>
+                             <li><a href="#"> <span>热门</span>这是来自未来的手机，vivo NEX 3的多面评测</a></li>
+                             <li><a href="#"> <span>热门</span>冲奶粉不做这个动作，奶粉最贵都放浪费</a></li>
+                         </ul>
+                </div>
+                <!-- 京东秒杀 -->
+                <div class="content_wrapper_info_box">
+                    <div class="secondsKill_area">
+                           <!-- 倒计时区域 -->
+                          <div class="secondsKill_area_time">
+                             <div class="secondsKill_title"></div>
+                             <div class="secondsKill_titleTips"></div>
+                             <div class="secondsKill_time"></div>
+                          </div>
+                          <!-- 商品区域 -->
+                          <div class="secondsKill_area_goods">
+                              <ul>
+                                  <li>
+                                     <div class="pic_box">
+                                         <a href="#" target="_blank">
+                                             <img  width="140" height="140" src="http://img10.360buyimg.com/mobilecms/s280x280_jfs/t1/58536/36/10458/133739/5d7888b8E5f3b396a/8b1a96c186ee2fce.jpg.webp" alt="">
+                                         </a>
+                                     </div>
+                                  </li>
+                                  <li>
+                                    <div class="pic_box">
+                                        <a href="#" target="_blank">
+                                            <img  width="140" height="140" src="http://img10.360buyimg.com/mobilecms/s280x280_jfs/t1/58536/36/10458/133739/5d7888b8E5f3b396a/8b1a96c186ee2fce.jpg.webp" alt="">
+                                        </a>
+                                    </div>
+                                  </li>
+                                  <li>
+                                    <div class="pic_box">
+                                        <a href="#" target="_blank">
+                                            <img  width="140" height="140" src="http://img10.360buyimg.com/mobilecms/s280x280_jfs/t1/58536/36/10458/133739/5d7888b8E5f3b396a/8b1a96c186ee2fce.jpg.webp" alt="">
+                                        </a>
+                                    </div>
+                                  </li>
+                                  <li>
+                                    <div class="pic_box">
+                                        <a href="#" target="_blank">
+                                            <img  width="140" height="140" src="http://img10.360buyimg.com/mobilecms/s280x280_jfs/t1/58536/36/10458/133739/5d7888b8E5f3b396a/8b1a96c186ee2fce.jpg.webp" alt="">
+                                        </a>
+                                    </div>
+                                  </li>
+                              </ul>
+                        </div>
+                        <!-- 其他商品区域 -->
+                        <div class="secondskill_area_other">
+                             <a href="#" target="_blank">
+                                 <img src="http://img30.360buyimg.com/mobilecms/s260x260_jfs/t1/73879/10/13658/244399/5daec316Ea15c77e9/46f28b7ad4ce8add.jpg.webp" alt="">
+                             </a>
+                             <div>弘基笔记本闪购</div>
+                             <div>轻薄本电竞本薄款直降</div>
+                        </div>
+                    </div>
+                 
+                </div>
             </div>
+            <!-- 为你推荐 -->
             <div class="wrapper_recommend"></div>
         </div>
     </div>
