轮播右侧广告位

--- a/index.html
+++ b/index.html
@@ -566,8 +566,42 @@
                           </div>
                     </div>
                 </div>
-                <div class="content_wrapper_ad_box"></div>
-                <div class="content_wrapper_info_box"></div>
+                <!-- 广告区域 -->
+                <div class="content_wrapper_ad_box">
+                  <!-- 第一个广告位 -->
+                  <div class="ad_box_div">
+                    <a href="#" target="_blank">
+                      <img width="100%" src="http://img10.360buyimg.com/babel/s380x300_jfs/t1/142395/4/14861/73822/5fb4761dEd65a5712/d0f5154a5c2b7d55.jpg.webp" alt="">
+                    </a>
+                  </div>
+                    <!-- 第二个广告位 -->
+                    <div class="ad_box_div">
+                      <a href="#" target="_blank">
+                        <img width="100%" src="http:////img14.360buyimg.com/babel/s380x300_jfs/t1/144991/12/14853/61504/5fb4f24bE36a7ffd8/b90fcf50e4bafd03.jpg.webp" alt="">
+                      </a>
+                    </div>
+                    <!-- 第三个广告位 -->
+                    <div class="ad_box_div">
+                      <a href="#" target="_blank">
+                        <img width="100%" src="http://img10.360buyimg.com/babel/s380x300_jfs/t1/123262/14/19184/77172/5fb743a2E1b756bdd/50b9f18dbbe881be.jpg.webp" alt="">
+                      </a>
+                    </div>
+                  </div>
+                <!-- 京东快报 -->
+                <div class="content_wrapper_info_box">
+                     <div class="content_wrapper_info_box_div_title">京东快报</div>
+                     <div class="content_wrapper_info_box_div">
+                       <ul>
+                       <li>
+                         <a href="#" target="_blank"> <span>推荐</span>2016年度Tws,你想了解不?</a></li>
+                       <li><a href="#" target="_blank"><span>推荐</span>这是来自未来的手机,你期待吗?</a></li>
+                       <li><a href="#" target="_blank"><span>推荐</span>这是一条来自小行星的通知!</a></li>
+                       <li><a href="#" target="_blank"><span>热门</span>这是一条热门信息,不点开抱你后悔</a></li>
+                       <li><a href="#" target="_blank"><span>热门</span>这是一条热门信息,不点开抱你后悔</a></li>
+                       <li><a href="#" target="_blank"><span>热门</span>这是一条热门信息,不点开抱你后悔</a></li>
+                      </ul>
+                     </div>
+                
             </div>
             <div class="wrapper_recommend"></div>
         </div>
