指定行数，超出部分省略

--- a/index.html
+++ b/index.html
@@ -841,8 +841,7 @@
                                         src="http://img12.360buyimg.com/jdcms/s300x300_jfs/t1/14657/35/4780/91654/5c357021Ef8ebd521/b4ef6914cd131f32.jpg"
                                         alt="">
                                 </div>
-                                <div class="goods_desc"> <i>京东国际</i>任天堂 Nintendo Switch 国行续航加强版红蓝主机 &
-                                    HORI轻薄硬壳保护包（附屏幕保护膜）&SD卡200G
+                                <div class="goods_desc"> <i>京东国际</i>任天堂 Nintendo Switch 国行续航加强版红蓝主机&HORI轻薄硬壳保护包（附屏幕保护膜）&SD卡200G
                                     TF存储卡</div>
                                 <div class="goods_prize"><i>¥</i>999.00</div>
                             </a>
